[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
papermill = {extras = ["s3"], version = "^2.3.4"}
awscli = "^1.22.46"
jupytext = "^1.13.6"
jupyterlab-code-formatter = "^1.4.10"
black = "^21.12b0"
isort = "^5.10.1"
mistune = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
