[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
papermill = {extras = ["s3"], version = "^2.3.4"}
awscli = "^1.25.44"
jupytext = "^1.14.1"
jupyterlab-code-formatter = "^1.5.1"
black = "^22.6.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
